--- a/style.css
+++ b/style.css
@@ -14,6 +14,22 @@
     transform: translate(-50%, -50%);
 }
 
+.pcScreen h3, p{
+    position: absolute;
+    color: #ffffff;
+    left: 548px;
+}
+
+.pcScreen h3{
+    top: 97px;
+    font-size: 30px;
+}
+
+.pcScreen p{
+    bottom: 25px;
+    font-size: 20px;
+}
+
 #imageContainer{
     width: 692px;
     height: 390px;
